--- a/proj2/proj1/src/main/resources/application.properties
+++ b/proj2/proj1/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=demo
 server.address=0.0.0.0
 server.port=8080
+spring.security.user.name=hello
+spring.security.user.password=hello123
