--- a/proj2/proj1/pom.xml
+++ b/proj2/proj1/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>spring-security-config</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>6.2.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 	<build>
